# bruker_backend

./: .env  .env.development  .env.docker  .env.local  .gitignore  README.md  docker-compose.yml  manage.py  pyproject.toml
.docker/: Dockerfile  entrypoint.sh
bruker_backend/: asgi.py  settings.py  urls.py  wsgi.py
classroom_scheduler/: admin.py  apps.py  filters.py  models.py  serializers.py  tests.py  urls.py  views.py
classroom_scheduler/migrations/: 0001_initial.py  0002_reservationinfo_reservation.py  0003_remove_reservationinfo_class_representatives_and_more.py  0004_reservation_proposed_room_and_more.py
classroom_scheduler/templates/: homepage.html  reservation_update_confirmation.html
cli_tools/: apps.py
cli_tools/management/commands/: populate_data.py
cli_tools/management/test_data/: Building.json  Groups.json  Reservations.json  Rooms.json  Users.json
static/css/: style.css
templates/: base.html
users/: admin.py  backends.py  decorators.py  forms.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: template_activate_account.html  template_reset_password.html
users/templates/user/: login.html  logout.html  password_reset_confirm.html  password_reset_form.html  register.html
